@@ -1,3 +1,4 @@
+	* feature: remove moves/variations
 	* feature: display side to move
 	* bugfix: fix incorrect SAN representation of en-passant moves
 	* bugfix: correctly calculate game length displayed in GameInfo
